--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
 
+2.1.0 (2018-10-08)
+	New Features
+	- Accept optional git revision range (#4)
+
 2.0.0 (2018-04-20)
 	New Features
 	- Group changes by type in changelog (#3)
